--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 09:29:00 AM</p>
+    <p class="lastupdate">09/13/2020 09:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.4&#176;F</td>
+        <td class="data">58.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.4&#176;F</td>
+        <td class="data">58.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.4&#176;F</td>
+        <td class="data">58.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">41.3&#176;F</td>
+        <td class="data">41.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.927 inHg (0.034)</td>
+        <td class="data">29.928 inHg (0.034)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="03:55:07 AM">
-            41.3</span><br/>
+          <span title="09:33:33 AM">
+            41.8</span><br/>
           <span title="07:29:11 AM">
             37.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:55:07 AM (Sunday)">
-            41.3</span><br/>
+          <span title="09:33:33 AM (Sunday)">
+            41.8</span><br/>
           <span title="07:29:11 AM (Sunday)">
             37.9</span>
         </td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:23:01 AM">
-            29.927</span><br/>
+          <span title="09:33:01 AM">
+            29.928</span><br/>
           <span title="03:40:01 AM">
             29.865</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:23:01 AM (Sunday)">
-            29.927</span><br/>
+          <span title="09:33:01 AM (Sunday)">
+            29.928</span><br/>
           <span title="03:40:01 AM (Sunday)">
             29.865</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          345
+          346
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          345
+          346
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 18 hours, 42 minutes</td>
+      <td class="data">11 days, 18 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 18 hours, 42 minutes</td>
+      <td class="data">11 days, 18 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
