--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 10:04:00 AM</p>
+    <p class="lastupdate">09/13/2020 10:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">61.3&#176;F</td>
+        <td class="data">61.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">61.3&#176;F</td>
+        <td class="data">61.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">61.3&#176;F</td>
+        <td class="data">61.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">42.5&#176;F</td>
+        <td class="data">42.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">50%</td>
+        <td class="data">49%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.930 inHg (0.023)</td>
+        <td class="data">29.929 inHg (0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:03:57 AM">
-            61.3</span><br/>
+          <span title="10:08:23 AM">
+            61.9</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:03:57 AM (Sunday)">
-            61.3</span><br/>
+          <span title="10:08:23 AM (Sunday)">
+            61.9</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:03:57 AM" class="hival">
-            61.3</span>
+          <span title="10:08:23 AM" class="hival">
+            61.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:03:57 AM (Sunday)" class="hival">
-            61.3</span>
+          <span title="10:08:23 AM (Sunday)" class="hival">
+            61.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -235,13 +235,13 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:03:57 AM">
+          <span title="10:08:23 AM">
             42.5</span><br/>
           <span title="07:29:11 AM">
             37.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:03:57 AM (Sunday)">
+          <span title="10:08:23 AM (Sunday)">
             42.5</span><br/>
           <span title="07:29:11 AM (Sunday)">
             37.9</span>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          305
+          297
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          305
+          297
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 19 hours, 17 minutes</td>
+      <td class="data">11 days, 19 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 19 hours, 17 minutes</td>
+      <td class="data">11 days, 19 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
