--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 10:34:00 AM</p>
+    <p class="lastupdate">09/13/2020 10:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.8&#176;F</td>
+        <td class="data">65.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.8&#176;F</td>
+        <td class="data">65.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.8&#176;F</td>
+        <td class="data">65.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.0&#176;F</td>
+        <td class="data">42.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">45%</td>
+        <td class="data">43%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.920 inHg (0.008)</td>
+        <td class="data">29.918 inHg (0.003)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SE (135&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.6&#176;F</td>
+        <td class="data">72.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:34:00 AM">
-            64.8</span><br/>
+          <span title="10:38:57 AM">
+            65.8</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:34:00 AM (Sunday)">
-            64.8</span><br/>
+          <span title="10:38:57 AM (Sunday)">
+            65.8</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:34:00 AM" class="hival">
-            64.8</span>
+          <span title="10:38:57 AM" class="hival">
+            65.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:34:00 AM (Sunday)" class="hival">
-            64.8</span>
+          <span title="10:38:57 AM (Sunday)" class="hival">
+            65.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:09:59 AM">
             74</span><br/>
-          <span title="10:31:35 AM">
-            45</span>
+          <span title="10:38:25 AM">
+            43</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
             74</span><br/>
-          <span title="10:31:35 AM (Sunday)">
-            45</span>
+          <span title="10:38:25 AM (Sunday)">
+            43</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          236
+          225
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          236
+          225
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 19 hours, 47 minutes</td>
+      <td class="data">11 days, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 19 hours, 47 minutes</td>
+      <td class="data">11 days, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
